Revision history for JSON-Schema-Modern

{{$NEXT}}

0.586     2024-06-23 18:46:01Z
          - simplification of calculation for "multipleOf" keyword

0.585     2024-06-19 04:03:36Z
          - make use of core bool functionality where it exists (perl 5.36+)

0.584     2024-05-18 21:06:35Z
          - add 'get_entity_locations' helper sub to ::Document

0.583     2024-03-30 17:56:17Z
          - further optimization of error and annotation construction, which
            should significantly improve evaluation performance of large
            documents which heavily use the 'unevaluated*' keywords (such as a
            schema evaluated against its metaschema, or an OpenAPI document
            evaluated against its schema)

0.582     2024-01-23 03:18:31Z
          - change the status of some format tests that rely on optional
            modules so they are not reported as specification failures
          - fix forking test that failed on MSWin32

0.581     2024-01-18 05:35:16Z
          - make automated tests much quieter when some optional modules (e.g.
            used for format tests) are not installed

0.580     2024-01-18 04:38:33Z
          - update a format test to be more amenable to 32-bit architectures

0.579     2024-01-15 03:32:27Z
          - improve performance by checking for duplicates by comparing the
            checksum of a schema rather than the content itself
          - fix error occurring when using the FormatAssertion vocabulary in
            an evaluator object that was loaded from a serialized object
          - fixed custom format definitions to not allow 'integer' types, as
            per the specification
          - support custom format definitions that operate on more than one
            core data type
          - fixed handling of unrecognized formats in draft2020-12 and later
            (but only when the FormatAssertion vocabulary is explicitly
            requested, not with validate_formats=1)