@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix multipleOf test that fails on some peculiar architectures
 
 0.586     2024-06-23 18:46:01Z
           - simplification of calculation for "multipleOf" keyword
